# ai-project-management-agent

./: .gitignore  README.md  db_schema.sql  verify_setup.py
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: agent_definitions.py  graph_state.py
backend/app/api/: endpoints.py
backend/app/config/: settings.py
backend/app/db/: models.py  session.py
backend/app/graph/: workflow.py
backend/app/rag/: vector_store.py
backend/app/schemas/: schemas.py
backend/app/utils/: auth_helper.py  doc_loader.py  git_indexer.py
frontend/: app.py  package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AuthScreen.jsx  ChatTab.jsx  DashboardTab.jsx  MeetingsTab.jsx  RagTab.jsx  Sidebar.jsx  TasksTab.jsx
