[project]
name = "devpilot-backend"
version = "0.1.0"
description = "DevPilot AI - Backend Engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "sqlalchemy>=2.0.28",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "langchain>=0.1.12",
    "langchain-community>=0.0.28",
    "langchain-openai>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langgraph>=0.0.30",
    "supabase>=2.4.0",
    "pgvector>=0.2.5",
    "psycopg2-binary>=2.9.9",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "gitpython>=3.1.43",
    "pypdf>=4.1.0",
    "python-docx>=1.1.0",
    "faiss-cpu>=1.8.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.3",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.1.1",
]
